# Hobit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: agent_chat_ai_dto.rs  agent_chat_ai_dto_tests.rs  agent_chat_ai_provider.rs  agent_executor_diff_dto.rs  agent_executor_diff_dto_tests.rs  agent_executor_history_dto.rs  agent_executor_history_dto_tests.rs  agent_queue_aggregate_commands.rs  agent_queue_aggregate_dto.rs  agent_queue_aggregate_dto_tests.rs  agent_queue_completion_commands.rs  agent_queue_completion_dto.rs  agent_queue_control_commands.rs  agent_queue_control_dto.rs  agent_queue_direct_work_launcher.rs  agent_queue_dto.rs  agent_queue_dto_tests.rs  agent_queue_execution_commands.rs  agent_queue_execution_dto.rs  agent_queue_execution_dto_tests.rs  agent_queue_failure_commands.rs  agent_queue_failure_dto.rs  agent_queue_prompt_pack_commands.rs  agent_queue_review_commands.rs  agent_queue_review_dto.rs  agent_queue_runner.rs  agent_queue_runner_commands.rs  agent_queue_task_commands.rs  agent_queue_task_dto.rs  agent_queue_task_dto_tests.rs  agent_queue_worker_commands.rs  agent_queue_worker_dto.rs  agent_queue_worker_evidence_commands.rs  agent_queue_worker_evidence_dto.rs  agent_queue_workflow_commands.rs  agent_queue_workflow_dto.rs  agent_queue_workflow_finalization_step_dto.rs  agent_queue_workflow_review_step_dto.rs  agent_queue_workflow_start_step_dto.rs  app_state.rs  (+60 more)
crates/hobit-app/: Cargo.toml  README.md
crates/hobit-app/src/: error.rs  lib.rs  workspace_service.rs
crates/hobit-app/src/artifacts/: classification.rs  ids.rs  mod.rs  ownership.rs  refs.rs  summary.rs  tests.rs
crates/hobit-app/src/audit_events/: envelope.rs  ids.rs  kinds.rs  mod.rs  redaction.rs  refs.rs  summaries.rs  tests.rs
crates/hobit-app/src/capabilities/: actions.rs  mod.rs  tests.rs
crates/hobit-app/src/context_packs/: mod.rs
crates/hobit-app/src/knowledge/: evidence.rs  ids.rs  links.rs  metadata.rs  mod.rs  production.rs  skills.rs  summary.rs  tests.rs
crates/hobit-app/src/runtime_adapters/: artifacts.rs  ids.rs  kinds.rs  mod.rs
crates/hobit-app/src/workspace_service/: agent_ai_proposal_tests.rs  agent_ai_proposals.rs  agent_executor_diff.rs  agent_executor_diff_tests.rs  agent_executor_history.rs  agent_executor_history_tests.rs  agent_monitoring.rs  agent_monitoring_tests.rs  agent_proposal_tests.rs  agent_proposals.rs  agent_queue.rs  agent_queue_aggregate.rs  agent_queue_aggregate_tests.rs  agent_queue_completion.rs  agent_queue_completion_tests.rs  agent_queue_context.rs  (+130 more)
(+1653 files in other folders)
