[package]
name = "hobit-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hobit-agent.workspace = true
hobit-core.workspace = true
hobit-storage-sqlite.workspace = true
hobit-tools.workspace = true
serde_json = "1"
