[package]
name = "hobit-desktop"
version = "0.1.0"
description = "Hobit desktop shell"
authors = ["Hobit"]
license = "MIT"
repository = "https://github.com/d-koshelev/Hobit"
edition = "2021"
default-run = "hobit-desktop"
build = "build.rs"

[lib]
name = "hobit_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hobit-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hobit-app = { path = "../../../crates/hobit-app" }
hobit-storage-sqlite = { path = "../../../crates/hobit-storage-sqlite" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
